# interned

./: Cargo.toml  README.docify.md  README.md
src/: _unsafe.rs  datatype.rs  interned_str.rs  lib.rs  memoized.rs  staticize.rs  unsized_types.rs
tests/: tests.rs
