[package]
name = "interned"
version = "0.1.4"
edition = "2021"
authors = ["sam0x17"]
license = "MIT"
description = "Provides a generic Interned<T> which can intern practically any type including &str, slices, and primitives, plus memoization via Memoized<I, T>"
keywords = ["intern", "interned", "memoize", "caching"]
repository = "https://github.com/sam0x17/interned"

[dependencies]
docify = "0.2"
staticize = { version = "0.1.1", features = ["std"] }

[features]
default = []
generate-readme = []
