[package]
name = "interned"
version = "0.1.6"
edition = "2021"
authors = ["sam0x17"]
license = "MIT"
description = "Provides a generic Interned<T> which can intern practically any type including &str, slices, and primitives, plus memoization via Memoized<I, T>"
keywords = ["intern", "interned", "memoize", "caching"]
repository = "https://github.com/sam0x17/interned"

[dependencies]
staticize = { version = "0.1.2", features = ["std"] }
docify = { version = "0.2", optional = true }

[dev-dependencies]
docify = "0.2"

[features]
default = []
generate-readme = ["dep:docify"]
